@@ -641,6 +641,10 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Fixed check-boxes in the preferences dialog for the various
 		  obfuscation options not being updated when one of the other
 		  obfuscation check-boxes were checked/unchecked.
+		* Added the ability to update the nodes.dat file via the
+		  remote gui, as well as bootstrapping from a specific IP.
+		  However, as with the server.met file, the new url is only
+		  saved in the core, but is not transmitted to the remote UI.
 
 	xor:
 		* Fix for crash on amuled when starting up kademlia.
